--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "backend server to hashtag messenger",
   "main": "server.js",
   "repository": "https://github.com/creative-tutorials/hashenger-backend",
-  "author": "Treasure <68476321+Treasure-dell@users.noreply.github.com>",
-  "license": "CC0-1.0 license",
+  "author": "creative-tutorials",
+  "license": "Apache-2.0 license",
   "scripts": {
     "test": "yarn test",
     "start": "node server.js",
